[gd_scene load_steps=16 format=3 uid="uid://dfus7yvwe8o0w"]

[ext_resource type="Script" uid="uid://c4n53rkbitwny" path="res://Game Elements/ui/main_menu/main_menu_effects.gd" id="1_6am0n"]
[ext_resource type="Script" uid="uid://b2yehc48vhfk4" path="res://Game Elements/ui/main_menu/main_menu.gd" id="1_28flt"]
[ext_resource type="Texture2D" uid="uid://rawhoxpikpyp" path="res://art/title_assets/grainy_background_visual.png" id="1_l8pfx"]
[ext_resource type="Texture2D" uid="uid://ci51uf2w36bgw" path="res://art/title_assets/grainy_purple_and_orange_hourglass.png" id="2_6am0n"]
[ext_resource type="StyleBox" uid="uid://dobyvfqwbwfh0" path="res://Game Elements/ui/resources/7-1_button.tres" id="5_5lttq"]
[ext_resource type="Texture2D" uid="uid://b8yopxv6r5ajk" path="res://art/title_assets/title_variants/space.png" id="5_fhhe5"]
[ext_resource type="StyleBox" uid="uid://gpahke45chv" path="res://Game Elements/ui/resources/7-3_button.tres" id="6_a412y"]
[ext_resource type="StyleBox" uid="uid://duatvi4nhndpj" path="res://Game Elements/ui/resources/4-1_button.tres" id="7_6wjqi"]
[ext_resource type="StyleBox" uid="uid://7c2wqv48pg7x" path="res://Game Elements/ui/resources/7-2_button.tres" id="7_odps5"]
[ext_resource type="Shader" uid="uid://df6is5vss0kty" path="res://Game Elements/ui/resources/timelines.gdshader" id="9_6wjqi"]
[ext_resource type="StyleBox" uid="uid://bl5m86jryhcbv" path="res://Game Elements/ui/resources/4-3_button.tres" id="9_odps5"]
[ext_resource type="Texture2D" uid="uid://eifbgnatdh4i" path="res://art/particles/gradiant_dot3.png" id="10_a412y"]
[ext_resource type="StyleBox" uid="uid://4eubuwqyfxh3" path="res://Game Elements/ui/resources/4-2_button.tres" id="10_c3jtu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qvtd8"]
shader = ExtResource("9_6wjqi")
shader_parameter/time = 0.0
shader_parameter/tendril_count = 30
shader_parameter/tendril_thickness = 20.0
shader_parameter/tendril_waviness = 18.206000627285
shader_parameter/tendril_speed = 1.5
shader_parameter/view_offset = Vector2(0.5, 0.5)
shader_parameter/range_start = 1.50000007125
shader_parameter/range_end = 2.50000011875

[sub_resource type="LabelSettings" id="LabelSettings_l8pfx"]
font_size = 200
outline_size = 30
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_6am0n")

[node name="Background" type="TextureRect" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_l8pfx")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
z_index = -2
layout_mode = 0
offset_left = 386.0
offset_top = 137.0
offset_right = 727.0
offset_bottom = 647.0
rotation = 0.5235988
texture = ExtResource("2_6am0n")
expand_mode = 1
stretch_mode = 4

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_qvtd8")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1000)
render_target_update_mode = 4

[node name="Title" type="TextureRect" parent="SubViewportContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_fhhe5")

[node name="UI_Group" type="Control" parent="SubViewportContainer/SubViewport"]
layout_mode = 3
anchors_preset = 0
offset_right = 1921.0
offset_bottom = 997.0
mouse_filter = 1
script = ExtResource("1_28flt")

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewportContainer/SubViewport/UI_Group"]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.5
offset_top = -68.0
offset_right = 89.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="SubViewportContainer/SubViewport/UI_Group/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_l8pfx")
uppercase = true

[node name="Spacer" type="Control" parent="SubViewportContainer/SubViewport/UI_Group/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="StartSinglePlayer" type="Button" parent="SubViewportContainer/SubViewport/UI_Group/VBoxContainer" groups=["ui_buttons"]]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_bottom = NodePath("../StartMPlayer")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("5_5lttq")
theme_override_styles/pressed = ExtResource("6_a412y")
theme_override_styles/hover = ExtResource("7_odps5")
theme_override_styles/hover_pressed = ExtResource("6_a412y")
theme_override_styles/disabled = ExtResource("5_5lttq")
theme_override_styles/focus = ExtResource("7_odps5")
text = "Start Singleplayer"

[node name="StartMPlayer" type="Button" parent="SubViewportContainer/SubViewport/UI_Group/VBoxContainer" groups=["ui_buttons"]]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../StartSinglePlayer")
focus_neighbor_bottom = NodePath("../SettingsButton")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("5_5lttq")
theme_override_styles/pressed = ExtResource("6_a412y")
theme_override_styles/hover = ExtResource("7_odps5")
theme_override_styles/hover_pressed = ExtResource("6_a412y")
theme_override_styles/disabled = ExtResource("5_5lttq")
theme_override_styles/focus = ExtResource("7_odps5")
text = "Start Multiplayer"

[node name="SettingsButton" type="Button" parent="SubViewportContainer/SubViewport/UI_Group/VBoxContainer" groups=["ui_buttons"]]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../StartMPlayer")
focus_neighbor_bottom = NodePath("../QuitButton")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("7_6wjqi")
theme_override_styles/pressed = ExtResource("9_odps5")
theme_override_styles/hover = ExtResource("10_c3jtu")
theme_override_styles/hover_pressed = ExtResource("9_odps5")
theme_override_styles/disabled = ExtResource("7_6wjqi")
theme_override_styles/focus = ExtResource("10_c3jtu")
text = "Settings"

[node name="QuitButton" type="Button" parent="SubViewportContainer/SubViewport/UI_Group/VBoxContainer" groups=["ui_buttons"]]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../SettingsButton")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("7_6wjqi")
theme_override_styles/pressed = ExtResource("9_odps5")
theme_override_styles/hover = ExtResource("10_c3jtu")
theme_override_styles/hover_pressed = ExtResource("9_odps5")
theme_override_styles/disabled = ExtResource("7_6wjqi")
theme_override_styles/focus = ExtResource("10_c3jtu")
text = "Quit Game"

[node name="BreakFX" type="CanvasLayer" parent="."]

[node name="Light_texture" type="TextureRect" parent="."]
modulate = Color(0.52135843, 0.0013825077, 0.6983415, 1)
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -231.0
offset_top = -244.0
offset_right = 281.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("10_a412y")

[node name="Light_texture2" type="TextureRect" parent="."]
modulate = Color(0.52135843, 0.0013825077, 0.6983415, 1)
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -231.0
offset_top = -244.0
offset_right = 281.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("10_a412y")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -963.0
offset_top = -81.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[font=res://addons/input_prompt_icon_font/icon.ttf]keyboard_space[/font]: Enable/Disable Fracturing"
horizontal_alignment = 2

[connection signal="pressed" from="SubViewportContainer/SubViewport/UI_Group/VBoxContainer/StartSinglePlayer" to="SubViewportContainer/SubViewport/UI_Group" method="_on_start_button_pressed"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/UI_Group/VBoxContainer/StartMPlayer" to="SubViewportContainer/SubViewport/UI_Group" method="_on_start_m_button_pressed"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/UI_Group/VBoxContainer/SettingsButton" to="SubViewportContainer/SubViewport/UI_Group" method="_on_settings_button_pressed"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/UI_Group/VBoxContainer/QuitButton" to="SubViewportContainer/SubViewport/UI_Group" method="_on_quit_button_pressed"]
